# AudioSegmenter

./: .gitignore  CMakeLists.txt  README.md  package.xml
AudioSegmenter/: setup.py  start_segmenter.py  util.py
AudioSegmenter/include/: base_segmenter.h  double_threshold_segmenter.h  utils.h
AudioSegmenter/src/: double_threshold_segmenter.cpp  main.cpp  utils.cpp
config/: default.cfg  default.yaml  eval_pipeline_2.cfg  eval_pipeline_4.cfg  pepper_robot.cfg
launch/: audio_segmenter.launch
